--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mdb-react-template",
+  "name": "Cowlang IDE",
   "version": "5.0.0",
   "homepage": "https://RPS-Argonauts-FTC.github.io/Cowlang-IDE",
   "description": "template for mdb-react-ui-kit",
