--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Cowlang IDE",
+  "name": "cowlang-ide",
   "version": "5.0.0",
-  "homepage": "https://RPS-Argonauts-FTC.github.io/Cowlang-IDE",
+  "homepage": ".",
   "description": "template for mdb-react-ui-kit",
   "private": true,
   "dependencies": {
